Solved Overflow for PAgination

--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -1,6 +1,8 @@
 .pagination {
     display: flex;
-    justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .page-item:hover:not(.active) {background-color: black;}
